<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Inventory</string>
    <string name="action_settings">Settings</string>
    <string-array name="columns"></string-array>  
    <string name="new_inventory">Setup Inventory</string>
    <string name="hello">Welcome to</string>
    <string name="user_name">Your</string>
    <string name="inventory">Inventory System</string>
    <string name="view_button">View Inventory</string>
    <string name="change_button">Modify Inventory</string>
    <string name="user_create_sentence">Please select the Fields you would like to use:</string>
    <string name="product">Product</string>
    <string name="id_number">ID Number</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="unit_of_measure">Unit of Measure</string>
    <string name="description">Description</string>
    <string name="field_select_button">Set Fields</string>
    <string name="entry_directions">Enter the product information:</string>
    <string name="greeting">Easy Inventory System</string>
    <drawable />

</resources>
